--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -14,4 +14,11 @@ div {
 	flex-direction: column;
 	justify-content: center;
 	padding-left: 40px;
+	background-color: aliceblue;
+	width: max-content;
+}
+.Route details {
+	margin: 10px;
+	cursor: pointer;
+	background-color: #f0f0f0;
 }
