--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -21,4 +21,26 @@ div {
 	margin: 10px;
 	cursor: pointer;
 	background-color: #f0f0f0;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+}
+.Route > div {
+	display: flex;
+	flex-direction: row;
+	justify-content: flex-start;
+}
+.Route > div > span {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 25px;
+	height: 25px;
+	padding: 10px;
+	margin-top: 9px;
+	background-color: aqua;
+	&:hover {
+		background-color: #f0f0f0;
+		cursor: pointer;
+	}
 }
