--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -3,44 +3,190 @@
 	padding: 0;
 	box-sizing: border-box;
 }
-
-div {
+body {
+	font-family: "Roboto", sans-serif;
+	background-color: #282c34;
+	height: 100vh;
+}
+.App {
 	display: flex;
 	flex-direction: column;
+	justify-content: space-between;
+	max-width: max-content;
+	margin: auto;
+	align-items: stretch;
+	color: white;
+	& > .Route {
+		padding-left: 10px;
+		position: relative;
+	}
 }
-
+/* Folders tree */
 .Route {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	padding-left: 40px;
-	background-color: aliceblue;
 	width: max-content;
+	& .Route {
+		width: 100%;
+	}
+	& > div {
+		display: flex;
+		flex-direction: row;
+		justify-content: flex-start;
+	}
+	& > div > details {
+		cursor: pointer;
+		position: relative;
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+		margin: 2px 0px 2px 2px;
+		border: 1px solid rgba(0, 140, 255, 0.2);
+		border-radius: 5px;
+		transition: max-height 400ms ease, width 400ms ease, height 400ms ease;
+		max-height: 39px;
+		width: 100%;
+		&[open] {
+			background-color: rgba(0, 140, 255, 0.1);
+			max-height: 600px;
+			transition: max-height 400ms ease;
+		}
+		& summary {
+			display: flex;
+			flex-direction: row;
+			justify-content: space-between;
+			gap: 10px;
+			padding: 8px 0px 8px 8px;
+			align-items: center;
+			& > span {
+				display: flex;
+				flex-direction: row;
+				justify-content: center;
+				align-items: center;
+				gap: 5px;
+				& > svg {
+					display: flex;
+					justify-content: center;
+					align-items: center;
+					fill: rgba(0, 140, 255, 0.5);
+					transform: rotate(-90deg);
+					transition: transform 0.3s ease-in-out;
+				}
+			}
+		}
+		&[open] > summary > span > svg {
+			transform: rotate(0deg);
+		}
+		& .noCursor {
+			cursor: default;
+		}
+		&[open].noCursor {
+			background-color: inherit;
+		}
+		& button {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			width: 20px;
+			height: 20px;
+			padding: 10px;
+			margin-right: 8px;
+			background-color: rgba(0, 140, 255, 0.103);
+			border: 1px solid rgb(0, 140, 255);
+			outline: none;
+			color: white;
+			font-weight: 800;
+			border-radius: 50%;
+			&:hover {
+				background-color: rgb(36, 144, 233);
+				cursor: pointer;
+			}
+		}
+	}
+	& .addFolder {
+		position: absolute;
+		top: 0;
+		right: -280px;
+		display: flex;
+		flex-direction: column;
+		justify-content: flex-start;
+		gap: 5px;
+		align-items: center;
+		padding: 8px;
+		margin: 2px;
+		border: 1px solid rgba(0, 140, 255, 0.2);
+		border-radius: 5px;
+		& > div {
+			display: flex;
+			flex-direction: row;
+			justify-content: space-between;
+			width: 100%;
+		}
+		& input {
+			background-color: transparent;
+			border: 1px solid rgba(0, 140, 255, 0.2);
+			border-radius: 5px;
+			color: white;
+			font-size: 1.1em;
+			padding: 5px;
+			width: 100%;
+			&:focus {
+				outline: none;
+			}
+		}
+		& button {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			width: 25px;
+			height: 25px;
+			padding: 0;
+			background-color: rgba(0, 140, 255, 0.103);
+			border: none;
+			outline: none;
+			color: white;
+			border-radius: 50%;
+			transform: background-color 0.3s ease-in-out;
+			&:hover {
+				background-color: rgb(36, 144, 233);
+				cursor: pointer;
+				& svg {
+					fill: white;
+				}
+			}
+			& svg {
+				fill: rgba(0, 140, 255, 0.719);
+				width: 25px;
+				height: 25px;
+				border-radius: 50%;
+				transition: fill 0.3s ease-in-out;
+			}
+		}
+	}
 }
-.Route details {
-	margin: 10px;
-	cursor: pointer;
-	background-color: #f0f0f0;
+.st0 {
+	display: none;
+}
+.st1 {
+	display: inline;
+}
+
+/* Parameters */
+
+.TypesContainer {
 	display: flex;
+	gap: 10px;
 	flex-direction: column;
 	justify-content: space-between;
-}
-.Route > div {
-	display: flex;
-	flex-direction: row;
-	justify-content: flex-start;
-}
-.Route > div > span {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	width: 25px;
-	height: 25px;
-	padding: 10px;
-	margin-top: 9px;
-	background-color: aqua;
-	&:hover {
-		background-color: #f0f0f0;
-		cursor: pointer;
+	padding: 10px 20px;
+	background-color: rgba(0, 0, 0, 0.2);
+	border-radius: 10px;
+	& > div {
+		display: flex;
+		gap: 10px;
+		flex-direction: row;
+		justify-content: flex-start;
 	}
 }
