--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -105,64 +105,64 @@ body {
 			}
 		}
 	}
-	& .addFolder {
-		position: absolute;
-		top: 0;
-		right: -280px;
+}
+.addFolder {
+	position: relative;
+	top: 0;
+	left: 0;
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	gap: 5px;
+	align-items: center;
+	padding: 8px;
+	margin: 15px 2px;
+	border: 2px solid rgba(0, 140, 255, 0.4);
+	border-radius: 5px;
+	& > div {
 		display: flex;
-		flex-direction: column;
-		justify-content: flex-start;
-		gap: 5px;
-		align-items: center;
-		padding: 8px;
-		margin: 2px;
+		flex-direction: row;
+		justify-content: space-between;
+		width: 100%;
+	}
+	& input {
+		background-color: transparent;
 		border: 1px solid rgba(0, 140, 255, 0.2);
 		border-radius: 5px;
-		& > div {
-			display: flex;
-			flex-direction: row;
-			justify-content: space-between;
-			width: 100%;
+		color: white;
+		font-size: 1.1em;
+		padding: 5px;
+		width: 100%;
+		&:focus {
+			outline: none;
 		}
-		& input {
-			background-color: transparent;
-			border: 1px solid rgba(0, 140, 255, 0.2);
-			border-radius: 5px;
-			color: white;
-			font-size: 1.1em;
-			padding: 5px;
-			width: 100%;
-			&:focus {
-				outline: none;
+	}
+	& button {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		width: 25px;
+		height: 25px;
+		padding: 0;
+		background-color: rgba(0, 140, 255, 0.103);
+		border: none;
+		outline: none;
+		color: white;
+		border-radius: 50%;
+		transform: background-color 0.3s ease-in-out;
+		&:hover {
+			background-color: rgb(36, 144, 233);
+			cursor: pointer;
+			& svg {
+				fill: white;
 			}
 		}
-		& button {
-			display: flex;
-			justify-content: center;
-			align-items: center;
+		& svg {
+			fill: rgba(0, 140, 255, 0.719);
 			width: 25px;
 			height: 25px;
-			padding: 0;
-			background-color: rgba(0, 140, 255, 0.103);
-			border: none;
-			outline: none;
-			color: white;
 			border-radius: 50%;
-			transform: background-color 0.3s ease-in-out;
-			&:hover {
-				background-color: rgb(36, 144, 233);
-				cursor: pointer;
-				& svg {
-					fill: white;
-				}
-			}
-			& svg {
-				fill: rgba(0, 140, 255, 0.719);
-				width: 25px;
-				height: 25px;
-				border-radius: 50%;
-				transition: fill 0.3s ease-in-out;
-			}
+			transition: fill 0.3s ease-in-out;
 		}
 	}
 }
