--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -12,13 +12,27 @@ body {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
-	max-width: max-content;
+	max-width: 350px;
+	min-width: max-content;
 	margin: auto;
 	align-items: stretch;
 	color: white;
+	padding-bottom: 25px;
 	& > .Route {
 		padding-left: 10px;
+		margin: 15px 0;
 		position: relative;
+	}
+	& > .floating {
+		position: sticky;
+		top: 1px;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		background-color: #303746;
+		border-radius: 10px;
+		padding: 10px;
+		z-index: 5;
 	}
 }
 /* Folders tree */
@@ -27,7 +41,7 @@ body {
 	flex-direction: column;
 	justify-content: center;
 	padding-left: 40px;
-	width: max-content;
+
 	& .Route {
 		width: 100%;
 	}
@@ -99,6 +113,7 @@ body {
 			color: white;
 			font-weight: 800;
 			border-radius: 50%;
+			transition: background-color 0.3s ease-in-out;
 			&:hover {
 				background-color: rgb(36, 144, 233);
 				cursor: pointer;
@@ -172,7 +187,23 @@ body {
 .st1 {
 	display: inline;
 }
-
+.MainButton {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+	height: 40px;
+	background-color: rgba(0, 140, 255, 0.103);
+	border: 1px solid rgba(0, 140, 255, 0.2);
+	border-radius: 5px;
+	color: white;
+	font-weight: 800;
+	transition: background-color 0.3s ease-in-out;
+	&:hover {
+		background-color: rgb(36, 144, 233);
+		cursor: pointer;
+	}
+}
 /* Parameters */
 
 .TypesContainer {
@@ -181,7 +212,7 @@ body {
 	flex-direction: column;
 	justify-content: space-between;
 	padding: 10px 20px;
-	background-color: rgba(0, 0, 0, 0.2);
+
 	border-radius: 10px;
 	& > div {
 		display: flex;
