--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -51,7 +51,6 @@ body {
 		justify-content: flex-start;
 	}
 	& > div > details {
-		cursor: pointer;
 		position: relative;
 		display: flex;
 		flex-direction: column;
@@ -74,6 +73,7 @@ body {
 			gap: 10px;
 			padding: 8px 0px 8px 8px;
 			align-items: center;
+			cursor: pointer;
 			& > span {
 				display: flex;
 				flex-direction: row;
@@ -93,7 +93,7 @@ body {
 		&[open] > summary > span > svg {
 			transform: rotate(0deg);
 		}
-		& .noCursor {
+		& .noCursor summary {
 			cursor: default;
 		}
 		&[open].noCursor {
@@ -212,12 +212,69 @@ body {
 	flex-direction: column;
 	justify-content: space-between;
 	padding: 10px 20px;
-
 	border-radius: 10px;
 	& > div {
 		display: flex;
 		gap: 10px;
+		padding: 5px;
 		flex-direction: row;
 		justify-content: flex-start;
+		cursor: pointer;
+		border: 1px solid rgba(0, 140, 255, 0.2);
+		border-radius: 5px;
+		& label {
+			cursor: pointer;
+		}
+	}
+	& .subContainer {
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+		padding: 10px;
+		border-radius: 10px;
+		& > div {
+			display: flex;
+			gap: 10px;
+			padding: 5px;
+			flex-direction: row;
+			justify-content: flex-start;
+			cursor: pointer;
+			border: 1px solid rgba(255, 208, 0, 0.2);
+			border-radius: 5px;
+			& label {
+				cursor: pointer;
+			}
+		}
+	}
+	& .radio {
+		width: 20px;
+		height: 20px;
+		border-radius: 50%;
+		position: relative;
+		transition: background-color 0.3s ease-in-out;
+		&::before {
+			content: "";
+			display: block;
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			transform: translate(-50%, -50%);
+			width: 15px;
+			height: 15px;
+			border-radius: 50%;
+			transition: background-color 0.3s ease-in-out;
+		}
+	}
+	& .unchecked .radio {
+		background-color: rgba(0, 140, 255, 0.1);
+		&::before {
+			background-color: #cde9ff73;
+		}
+	}
+	& .checked .radio {
+		background-color: rgb(36, 144, 233);
+		&::before {
+			background-color: #e5f4ff;
+		}
 	}
 }
