--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -266,6 +266,7 @@ body {
 }
 
 .select {
+	position: relative;
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
@@ -309,6 +310,23 @@ body {
 				background-color: rgba(16, 39, 68, 0.44);
 			}
 		}
+	}
+	& svg {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		fill: rgba(0, 140, 255, 0.5);
+		transform: rotate(90deg);
+		position: absolute;
+		right: 8px;
+		width: 12px;
+		transition: transform 0.1s ease-in-out;
+		& path {
+			transform: scale(1);
+		}
+	}
+	& .open {
+		transform: rotate(0deg);
 	}
 }
 
