--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -2,20 +2,24 @@
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
+	font-family: "Tahoma", sans-serif;
+}
+h1,
+h2 {
+	font-family: "Tahoma", sans-serif;
+	font-weight: 600;
 }
 body {
-	font-family: "Roboto", sans-serif;
 	background-color: #282c34;
 	height: 100vh;
 }
 .App {
 	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-	max-width: 350px;
-	min-width: max-content;
+	flex-direction: row;
+	justify-content: center;
 	margin: auto;
-	align-items: stretch;
+	align-items: flex-start;
+	gap: 20px;
 	color: white;
 	padding-bottom: 25px;
 	& > .Route {
@@ -23,7 +27,7 @@ body {
 		margin: 15px 0;
 		position: relative;
 	}
-	& > .floating {
+	& .floating {
 		position: sticky;
 		top: 1px;
 		display: flex;
@@ -33,6 +37,10 @@ body {
 		border-radius: 10px;
 		padding: 10px;
 		z-index: 5;
+	}
+	& > div {
+		max-width: 350px;
+		min-width: max-content;
 	}
 }
 /* Folders tree */
@@ -63,7 +71,7 @@ body {
 		width: 100%;
 		&[open] {
 			background-color: rgba(0, 140, 255, 0.1);
-			max-height: 600px;
+			max-height: 100vh;
 			transition: max-height 400ms ease;
 		}
 		& summary {
@@ -192,6 +200,7 @@ body {
 	justify-content: center;
 	align-items: center;
 	width: 100%;
+	min-width: 250px;
 	height: 40px;
 	background-color: rgba(0, 140, 255, 0.103);
 	border: 1px solid rgba(0, 140, 255, 0.2);
@@ -211,7 +220,7 @@ body {
 	gap: 10px;
 	flex-direction: column;
 	justify-content: space-between;
-	padding: 10px 20px;
+	padding: 10px 0px;
 	border-radius: 10px;
 	max-width: 400px;
 	& .subContainer {
@@ -282,7 +291,7 @@ body {
 		border-radius: 5px;
 		color: white;
 		font-size: 1.1em;
-		padding: 5px;
+		padding: 5px 22px 5px 5px;
 		flex: 1;
 	}
 	& .select__options {
@@ -370,6 +379,52 @@ body {
 		}
 		& label {
 			cursor: pointer;
+		}
+	}
+}
+
+.changes {
+	display: flex;
+	flex-direction: column;
+
+	gap: 10px;
+	padding: 10px;
+	& h1 {
+		font-size: 1.2em;
+	}
+	& h2 {
+		font-size: 1.1em;
+	}
+	& .detail {
+		display: flex;
+		flex-direction: row;
+		justify-content: space-between;
+		gap: 5px;
+		padding: 5px;
+		& p {
+			font-size: 1em;
+		}
+		& button {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			width: 25px;
+			height: 25px;
+			background-color: rgba(255, 0, 0, 0.103);
+			border: none;
+			outline: none;
+			color: white;
+			border-radius: 50%;
+			transition: background-color 0.3s ease-in-out;
+			&:hover {
+				background-color: rgb(233, 36, 36);
+				cursor: pointer;
+			}
+			& svg {
+				fill: white;
+				width: 15px;
+				height: 15px;
+			}
 		}
 	}
 }
